mejorando el diseño del codigo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
 
         <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=decive-width">
         <title>Barbería Alura</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -72,7 +73,7 @@
                     </ul><img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">
                 
                     <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Q-fQkXVm878" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Q-fQkXVm878" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 
                 </div>
